engine-net-2/examples/Errors/MatchClassErrorCompiled.grs
new graph "MatchClassErrorCompiled.grg"

quit
